test/users/bguarraci/for_var_ref.chpl
proc doit(ref x: int) {
  writeln(x);
}

for v in 1..2 {
  doit(v);
}
